namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: credit-scoring
  labels:
    app: credit-scoring
    environment: dev
    managedby: terraform
